hellow-v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment 
metadata: 
  name: hellow-v2
spec: 
  replicas: 3
  template:
    metadata: 
      labels:
        app: hellow
        version: v2
    spec:
      containers:
      - name: hellow 
        image: wardviaene/http-echo
        ports:
        - name: http
          containerPort: 8080
