hellow.yaml
apiVersion: extensions/v1beta1
kind: Deployment 
metadata: 
  name: hellow
spec: 
  replicas: 3
  template:
    metadata: 
      labels:
        app: hellow
        version: v1 
    spec:
      containers:
      - name: hellow
        image: wardviaene/http-echo
        ports:
        - name: http
          containerPort: 8080

---

apiVersion: v1 
kind: Service
metadata:
  name: hellow
  labels: 
   app: hellow
spec:
  selector:
   app: hellow
  ports: 
  - name: http 
    port: 8080
    tartgetPort: 8080
---

apiVersion: extensions/v1beta1
kind: Deployment 
metadata: 
  name: world
spec: 
  replicas: 3
  template:
    metadata: 
      labels:
        app: world
        version: v1 
    spec:
      containers:
      - name: world
        image: wardviaene/http-echo
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1 
kind: Service
metadata:
  name: world
  labels: 
   app: world
spec:
  selector:
   app: world
  ports: 
  - name: http 
    port: 8080
    tartgetPort: 8080

---

apiVersion: extensions/v1beta1
kind: Deployment 
metadata: 
  name: world-2
spec: 
  replicas: 3
  template:
    metadata: 
      labels:
        app: world-2
        version: v1 
    spec:
      containers:
      - name: world-2
        image: wardviaene/http-echo
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1 
kind: Service
metadata:
  name: world-2
  labels: 
   app: world-2
spec:
  selector:
   app: world-2
  ports: 
  - name: http 
    port: 8080
    tartgetPort: 8080
