hellow-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hellow-gateway
spec: 
  selector: 
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*"

---

apiVersion: networking,networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - hellow-gateway
  http:
  - match:
    - uri: 
        prefix: /hellow
    route:
    - destination: 
        host: hellow.default.svc.cluster.local
        port: 
          number: 8080
