hellow-v2-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: 
 name: hellow
spec:
  host: hellow.default.svc.cluster.local
  subsets:
  - name: v1 
    labels: 
      version: v1 
  - name: v2 
    labels: 
      version: v2

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: 
 name: helloworld 
spec:
  hosts: 
  - "hello.example.com"
  gateways:
  - hellow-gateway
  http:
  - match:
    - headers:
        end-user:
          exact: bihan
    route:
    - destination:
          host: hellow.default.svc.cluster.local
          subset: v2
          port:
           number: 8080
  - route:
    - destination: 
        host: hellow.default.svc.cluster.local
        subset: v1 
        port:
         number: 8080
